# router-poc

./: .gitignore  Cargo.toml  README.md  clippy.toml  flake.nix
.nix/pkgs/cargo-insta/: default.nix
benches/: advanced_criterion.rs  advanced_divan.rs  github.rs  gitlab.rs  oci.rs  path_tree_criterion.rs  path_tree_divan.rs  simple_criterion.rs  simple_divan.rs
fixtures/: advanced.rs  github.rs  gitlab.rs  oci.rs  simple.rs
src/: display.rs  lib.rs  matches.rs  node.rs  segment.rs  testing.rs  trie.rs
tests/: github.rs  gitlab.rs  matchit.rs  multibyte.rs  oci.rs  poem.rs
